swag and models fix
